--- a/PlaylistProject/PlaylistProject.csproj
+++ b/PlaylistProject/PlaylistProject.csproj
@@ -8,4 +8,14 @@
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.2.0" />
+    <PackageReference Include="Dapper" Version="2.1.24" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Views\Songs\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Songs\" />
+  </ItemGroup>
 </Project>
